recreated p5 and more fixes to the refactoring

--- a/w2/p1.html
+++ b/w2/p1.html
@@ -8,7 +8,7 @@
     Please use a browser that supports HTML5 canvas.
 </canvas>
   </canvas>
-  <script type="text/javascript" src="w2p1.js"></script>
+  <script type="text/javascript" src="p1.js"></script>
   </script>
 
 </body>
