--- a/w2/p5.html
+++ b/w2/p5.html
@@ -8,14 +8,15 @@
     Please use a browser that supports HTML5 canvas.
 </canvas>
   </canvas>
-  <script type="text/javascript" src="w2p4.js"></script>
+  <script type="text/javascript" src="p5.js"></script>
   <div>
       <select id="sphereMenu">
         <option value="0">Base Color</option>
         <option value="1">Lambertian</option>
         <option value="2">Mirror</option>
         <option value="3">refraction</option>
-        <option value="4" selected>Phong</option>
+        <option value="4">Phong</option>
+        <option value="5" selected>Glossy</option>
     </select>
     <select id="materialMenu">
         <option value="0">Base Color</option>
