--- a/w2/p2.html
+++ b/w2/p2.html
@@ -8,7 +8,7 @@
     Please use a browser that supports HTML5 canvas.
 </canvas>
   </canvas>
-  <script type="text/javascript" src="w2p2.js"></script>
+  <script type="text/javascript" src="p2.js"></script>
   <div>
       <select id="sphereMenu", size="3">
         <option value="0">Base Color</option>
