--- a/w2/p3.html
+++ b/w2/p3.html
@@ -8,7 +8,7 @@
     Please use a browser that supports HTML5 canvas.
 </canvas>
   </canvas>
-  <script type="text/javascript" src="w2p3.js"></script>
+  <script type="text/javascript" src="p3.js"></script>
   <div>
       <select id="sphereMenu">
         <option value="0">Base Color</option>
