--- a/w3/p2.html
+++ b/w3/p2.html
@@ -20,6 +20,7 @@
         <option value="3">refraction</option>
         <option value="4">Phong</option>
         <option value="5" selected>Glossy</option>
+        <option value="6">Glossy Mirror</option>
       </select>
       <select id="materialMenu">
         <option value="0">Base Color</option>
