--- a/w3/p3.html
+++ b/w3/p3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <h1>W3P2</h1>
+  <h1>W3P3</h1>
   <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 <body>
@@ -9,7 +9,7 @@
     Please use a browser that supports HTML5 canvas.
 </canvas>
   </canvas>
-  <script type="text/javascript" src="p2.js"></script>
+  <script type="text/javascript" src="p3.js"></script>
   <div>
     <menu id="controls">
 
@@ -30,6 +30,8 @@
         <option value="0">Clamp To Edge</option>
         <option value="1" selected>Repeat</option>
       </select>
+      <button id="increase">Increase</button>
+      <button id="decrease">Decrease</button>
     </menu>
   </div>
 </body>
