massive massive refactor

--- a/w5/p1.html
+++ b/w5/p1.html
@@ -5,13 +5,13 @@
   <link rel="stylesheet" type="text/css" href="../styles.css">
 </head>
 <body>
-<canvas id="webgpu-canvas">
-    Please use a browser that supports HTML5 canvas.
+<canvas id="webgpu-canvas" width="800" height="450">
 </canvas>
   </canvas>
+  <script type="text/javascript" src="../common/OBJParser.js"></script>
   <script type="text/javascript" src="p1.js"></script>
   <div>
-    <menu id="controls">
+    <menu>
 
       <select id="sphereMenu">
         <option value="0">Base Color</option>
