--- a/w7/p1.html
+++ b/w7/p1.html
@@ -25,5 +25,7 @@
         <div id="framecount"></div>
       </menu>
     </div>
+    <a>prerender</a>
+    <img src="./renders/image.png" alt="Sample Image" width="505" height="608" />
   </body>
 </html>
