--- a/w7/p3.html
+++ b/w7/p3.html
@@ -16,7 +16,7 @@
       type="text/javascript"
       src="../common/OBJParser_interleaved.js"
     ></script>
-    <script type="text/javascript" src="p1.js"></script>
+    <script type="text/javascript" src="p3.js"></script>
 
     <div style="align-items: flex-start">
       <canvas id="webgpu-canvas" width="512" height="512"> </canvas>
@@ -25,7 +25,9 @@
         <div id="framecount"></div>
       </menu>
     </div>
-    <a>prerender</a>
+    <div>
+      <h1>prerender</h1>
+    </div>
     <img src="./renders/image.png" alt="Sample Image" width="505" height="608" />
   </body>
 </html>
