--- a/project/project.html
+++ b/project/project.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>W7P2</title>
-    <h1>W7P2</h1>
+    <title>Project</title>
+    <h1>Project</h1>
     <link rel="stylesheet" type="text/css" href="../styles.css" />
   </head>
   <body>
@@ -16,14 +16,15 @@
       type="text/javascript"
       src="../common/OBJParser_interleaved.js"
     ></script>
-    <script type="text/javascript" src="p2.js"></script>
+    <script type="text/javascript" src="project.js"></script>
 
-    <div style="align-items: flex-start">
-      <canvas id="webgpu-canvas" width="512" height="512"> </canvas>
+    <div style="align-items: flex-start; text-align: center;">
+      <canvas id="webgpu-canvas" width="512" height="512" style="border-radius: 15px; text-align: center;"> </canvas>
       <menu>
         <input type="submit" value="Run/Stop" id="run" />
         <div id="framecount"></div>
       </menu>
+      
     </div>
   </body>
 </html>
