--- a/project/project2.html
+++ b/project/project2.html
@@ -4,8 +4,9 @@
     <a href="./report.html" style="position: absolute; padding: 30px">
       Report
     </a>
-    <title>Project</title>
-    <h1>Project</h1>
+    <title>Project 2</title>
+    <h1>Physically based render: <br/> with indirect illumination and depth of field
+    </h1>
     <link rel="stylesheet" type="text/css" href="../styles.css" />
   </head>
   <body>
@@ -19,7 +20,7 @@
       type="text/javascript"
       src="../common/OBJParser_interleaved.js"
     ></script>
-    <script type="text/javascript" src="project.js"></script>
+    <script type="text/javascript" src="project2.js"></script>
 
     <div style="align-items: flex-start; text-align: center">
       <canvas
